--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,14 @@ before_install:
 
 script:
  - docker run -e CI=true djangob1/docker-react npm run test
+
+ deploy:
+ provider: elasticbeanstalk
+ region: "us-west-2"
+ app: "docker-react"
+ env: "Docker-env"
+ bucket_name: "elasticbeanstalk-us-west-2-306476627547"
+ bucket_path: "docker-react"
+ on:
+  branch: master
+  
